--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 
     <link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css'>
 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Crisis Response</title>
 
     <!-- Bootstrap core CSS -->
@@ -24,12 +27,12 @@
   </head>
 
   <body id="top">
-    <img class="bg" src="img/bg2.jpg">
+    <img class="bg" src="img/bg4.jpg">
 
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <ul class="nav navbar-nav">
-          <li><a href="#">Crisis Response</a></li>
+          <li><a href="#">IA Airlines Crisis Response</a></li>
         </ul>
       </div>
     </nav>
@@ -42,51 +45,93 @@
           <div class="messages"></div>
 
           <div class="controls">
+  
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="selectIssueType">Select Priority Level *</label>
+                  <select class="form-control" id="selectIssueType" required data-error="Priority level is required.">
+                    <option value="" disabled selected>Choose a level</option>
+                    <option>High</option>
+                    <option>Medium</option>
+                    <option>Low</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="selectIssueType">Select Issue Type *</label>
+                  <select class="form-control" id="selectIssueType" required data-error="Issue type is required.">
+                    <option value="" disabled selected>Choose an issue</option>
+                    <option>Intoxicated Passenger</option>
+                    <option>Baggage Problem</option>
+                    <option>Medical Emergency</option>
+                    <option>Passenger Argument</option>
+                    <option>Seats or Overbooking</option>
+                  </select>
+                </div>
+              </div>
+            </div>
 
-              <div class="row">
-                  <div class="col-md-6">
-                      <div class="form-group">
-                          <label for="form_name">Firstname *</label>
-                          <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
-                          <div class="help-block with-errors"></div>
-                      </div>
-                  </div>
-                  <div class="col-md-6">
-                      <div class="form-group">
-                          <label for="form_lastname">Lastname *</label>
-                          <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
-                          <div class="help-block with-errors"></div>
-                      </div>
+            <div class="row">
+              <div class="col-md-6">
+                  <div class="form-group">
+                      <label for="flightNumber">Flight Number *</label>
+                      <input id="flightNumber" type="number" name="flightNumber" class="form-control" placeholder="Please enter the flight number *" required="required" data-error="Flight number is required.">
+                      <div class="help-block with-errors"></div>
                   </div>
               </div>
-              <div class="row">
-                  <div class="col-md-6">
-                      <div class="form-group">
-                          <label for="form_email">Email *</label>
-                          <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
-                          <div class="help-block with-errors"></div>
-                      </div>
-                  </div>
-                  <div class="col-md-6">
-                      <div class="form-group">
-                          <label for="form_phone">Phone</label>
-                          <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
-                          <div class="help-block with-errors"></div>
-                      </div>
+            </div>
+
+            <dic class="row">
+              <div class="col-md-6">
+                  <div class="form-group">
+                      <label for="seatNumber">Seat number</label>
+                      <input id="seatNumber" type="text" name="surname" class="form-control" placeholder="Please enter your lastname">
+                      <div class="help-block with-errors"></div>
                   </div>
               </div>
-              <div class="row">
-                  <div class="col-md-12">
-                      <div class="form-group">
-                          <label for="form_message">Message *</label>
-                          <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
-                          <div class="help-block with-errors"></div>
-                      </div>
-                  </div>
-                  <div class="col-md-12">
-                      <input type="submit" class="btn btn-success btn-send" value="Send message">
+            </div>
+
+            <div class="row">
+              <div class="col-md-6">
+                  <div class="form-group">
+                      <label for="name">Passenger Name</label>
+                      <input id="name" type="text" name="name" class="form-control" placeholder="Please enter the passenger name">
+                      <div class="help-block with-errors"></div>
                   </div>
               </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6">
+                  <div class="form-group">
+                      <label for="memberID">Crew Member ID *</label>
+                      <input id="memberID" type="number" name="id" class="form-control" placeholder="Please enter your phone" required="required" data-error="Crew Member ID is required.">
+                      <div class="help-block with-errors"></div>
+                  </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-12">
+                  <div class="form-group">
+                      <label for="form_message">Comments</label>
+                      <textarea id="form_message" name="message" class="form-control" placeholder="Comments on incident" rows="4"></textarea>
+                      <div class="help-block with-errors"></div>
+                  </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-12 pull-center">
+                  <input type="submit" class="btn btn-success btn-send" value="Send message">
+              </div>
+            </div>
+
           </div>
 
         </form>
@@ -98,10 +143,6 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/docs.min.js"></script>
-
-    <script src="js/headroom.js"></script>      
-    <script src="js/jQuery.headroom.js"></script>
-
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
