--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
           <div class="controls">
   
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <div class="form-group">
                   <label for="selectIssueType">Select Priority Level *</label>
                   <select class="form-control" id="selectIssueType" required data-error="Priority level is required.">
@@ -61,7 +61,7 @@
             </div>
             
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <div class="form-group">
                   <label for="selectIssueType">Select Issue Type *</label>
                   <select class="form-control" id="selectIssueType" required data-error="Issue type is required.">
@@ -77,7 +77,7 @@
             </div>
 
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-12">
                   <div class="form-group">
                       <label for="flightNumber">Flight Number *</label>
                       <input id="flightNumber" type="number" name="flightNumber" class="form-control" placeholder="Please enter the flight number *" required="required" data-error="Flight number is required.">
@@ -87,7 +87,7 @@
             </div>
 
             <dic class="row">
-              <div class="col-md-6">
+              <div class="col-md-12">
                   <div class="form-group">
                       <label for="seatNumber">Seat number</label>
                       <input id="seatNumber" type="text" name="surname" class="form-control" placeholder="Please enter your lastname">
@@ -97,7 +97,7 @@
             </div>
 
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-12">
                   <div class="form-group">
                       <label for="name">Passenger Name</label>
                       <input id="name" type="text" name="name" class="form-control" placeholder="Please enter the passenger name">
@@ -107,7 +107,7 @@
             </div>
 
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-12">
                   <div class="form-group">
                       <label for="memberID">Crew Member ID *</label>
                       <input id="memberID" type="number" name="id" class="form-control" placeholder="Please enter your phone" required="required" data-error="Crew Member ID is required.">
@@ -122,6 +122,17 @@
                       <label for="form_message">Comments</label>
                       <textarea id="form_message" name="message" class="form-control" placeholder="Comments on incident" rows="4"></textarea>
                       <div class="help-block with-errors"></div>
+                  </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-12">
+                  <div class="form-group">
+                  <label for="example-datetime-local-input" class="col-2 col-form-label">Date</label>
+                    <div class="col-10">
+                      <input class="form-control" type="date" value="2017-06-08" id="date">
+                    </div>
                   </div>
               </div>
             </div>
