--- a/public/hq-view.html
+++ b/public/hq-view.html
@@ -58,7 +58,7 @@
             <td><%= data[i][comments] %></td>
             <td><%= data[i][status] %></td>
             <td><%= data[i][date] %></td>
-            <td><%= data[i][action] %></td>
+            <td><span class="glyphicon glyphicon-th"</td>
           </tr>
           <% } %>
         </table>
