--- a/public/alert-view.html
+++ b/public/alert-view.html
@@ -7,6 +7,8 @@
 
     <link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css'>
 
+    <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
